fixed alignment + added custom scroll

--- a/style.css
+++ b/style.css
@@ -10,6 +10,25 @@
   padding: 0;
   /*border: solid white 1px;*/
 }
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #ff6b01 #181818;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #181818;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #ff6b01;
+  border-radius: 10px;
+  border: 3px none #ffffff;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -17,15 +36,14 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #181818;
+  margin-top: 2vh;
 }
-
 .inner {
   background-color: #181818;
   width: 700px;
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   height: 100vh;
   border: 3px solid #2f201850;
   border-top: none;
@@ -116,7 +134,6 @@ body {
 }
 img {
   pointer-events: none;
-
   -moz-user-select: none;
   -webkit-user-drag: none;
   -webkit-user-select: none;
@@ -166,6 +183,7 @@ img {
   display: block;
   transition: 0.5s ease;
   width: inherit;
+  margin-top:90vh;
   background: linear-gradient(
     0deg,
     rgba(255, 108, 17, 0.005) 0%,
@@ -181,7 +199,7 @@ img {
     rgba(255, 108, 17, 0.089) 0%,
     rgba(255, 107, 17, 0) 100%
   );
-  padding-bottom: 10px;
+  padding-top: 2vh;
 }
 #expand-icon {
   padding-bottom: 20px;
